--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -13,12 +13,12 @@ $color-1: #fff;
 $color-2: #dedede;
 $color-3: #404040;
 $color-4: #1d1d1d;
-$color-5: #630a23;
+$color-5: #343434;
 $color-6: #23345c;
 
 $btnBackground: #de9d13;
 $borderInputColor: #707070;
-$errorColor: #f00; 
+$errorColor: #e72c2c; 
 
 $tilesHiddenBg: rgba(210, 44, 88, 0.75);
 
@@ -56,7 +56,7 @@ body {
       background-color: $color-6;
       display: flex;
       position: fixed;
-      bottom: 0;
+      bottom: -1px;
       border-top: 1px solid $color-1;
       .container {
         flex-basis: 33%;
@@ -248,14 +248,17 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
-      .success {
+      > .success, > .error {
         margin: 20px 0;
         padding: 20px;
         transition: .5s;
         font-weight: 300;
       }
-      .success {
+      > .success {
         background: #06b906;
+      }
+      > .error {
+        background: $errorColor;
       }
     }
     .field {
@@ -296,22 +299,12 @@ body {
       font-weight: $font-bold;
       text-transform: uppercase;
     }
-    // .promo-info {
-    //   margin: 15px 0;
-    //   font-weight: $font-light;
-    //   font-size: 16px;
-    //   line-height: 20px;
-    //   width: 60vw;
-    //   text-align: center;
-    // }
   }
 }
 .nav-bottom-btns {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  // position: fixed;
-  // bottom: 0;
   .btn {
     padding: 10px 20px;
     background: none;
@@ -355,6 +348,31 @@ body {
     flex-direction: column;
     .row {
       display: flex;
+      &:nth-of-type(4), &:nth-of-type(5), &:nth-of-type(6), &:nth-of-type(7), &:nth-of-type(8), &:nth-of-type(9), &:nth-of-type(10) {
+        div {
+        background: rgb(255, 238, 218);
+        }
+      }
+      &:nth-of-type(1){
+        div {
+          font-weight: $font-bold;
+          background: #ff7e7e;
+        }
+      }
+      &:nth-of-type(2){
+        div {
+        background: #fcaaaa;
+        }
+      }
+      &:nth-of-type(3) {
+        margin-bottom: 5px;
+        div {
+          background: #ffc7c7;
+        }
+      }
+      &:nth-of-type(10) {
+        margin-bottom: 10px;
+      }
       div {
         display: flex;
         justify-content: center;
@@ -366,6 +384,7 @@ body {
         margin: 1px;
         padding: 5px;
         font-size: 18px;
+        border-radius: 1px;
       }
       .person-pos {
         flex: 0.2;
@@ -374,7 +393,6 @@ body {
         justify-content: left;
       }
     }
-    
   }
 }
 
@@ -400,6 +418,7 @@ body {
           background-size: contain;
           flex-basis: 20%;
           height: 12vh;
+          transition: all .2s;
         }
       }
     }
